# savetracker-nx

./: .gitignore  Cargo.toml  LICENSE  Makefile  README.md  clippy.toml  savetracker-nx.json  toolbox.json
.cargo/: config.toml
.github/workflows/: ci.yml
etc/: config.toml.example  savetracker.conf.example
lib/: config.c  config.h  patch.c  patch.h  safe_path.c  safe_path.h  snapshot.c  snapshot.h  timestamp.c  timestamp.h  tracker.c  tracker.h
src/: clock.c  clock.h  config.rs  led.c  led.h  main.c  main.rs  poll.rs  power.c  power.h  safe_writer.rs  save_fs.c  save_fs.h  sd_io.c  sd_io.h  snapshot.rs  title.c  title.h
src/ipc/: mock.rs  mod.rs  nx_power.rs  nx_savefs.rs  nx_title.rs
tests/: Makefile  test_config.c  test_patch.c  test_safe_path.c  test_snapshot.c  test_timestamp.c  test_tracker.c
tools/: lint_writes.sh
